# Panaversity_400_CloudNative_AI

./: .env
Learning/.claude/: settings.json  settings.local.json
Learning/03_CRUD_ErrorHandling_Tests/: README.md  main.py  pyproject.toml
Learning/04_dependencyInjection_SQLmodel_EnvironmentConfig/: .env.example  auth_token.py  db_schema.py  lifespan_event.py  main.py  middleware.py  pyproject.toml
Learning/Cloud_Native/: claude.md  docker_kubernetes_guide.md  kubernetes_commands_RBAC.md
Learning/Cloud_Native/.claude/: settings.local.json
Learning/Cloud_Native/08_docker/: Dockerfile
Learning/Cloud_Native/10_multiStage_container_build/: main.py
Learning/Cloud_Native/11_kubernetes_hello_search/: Dockerfile.multistage  deployment.yaml
Learning/Cloud_Native/12_kubernetes_RBAC/: README.md  role.yaml  rolebinding.yaml  serviceaccount.yaml
Learning/Cloud_Native/13_kubernetes_with_wslTerminal/: Readme.md
Learning/Cloud_Native/14/: pod.yaml  role.yaml  rolebinding.yaml  (+1 more)
Learning/Docker/: claude.md
Learning/fast-api-endpoints/: main.py  pyproject.toml  test_main.py
Learning/fastapi-hello-world/: README.md  pyproject.toml
Learning/fastapi-helloworld/: pyproject.toml
Projects/Agentic_AI_Based_Task_Management_System_backend/: main.py  pyproject.toml
Projects/Agentic_AI_Based_Task_Management_System_backend/tests/: conftest.py  test_main.py
Projects/Deployment using docker, kubernetes and so on of AI base Task management app/: AI_agent.py  Dockerfile  Dockerfile.api  Dockerfile.ui  compose.yaml  main.py  models.py  pyproject.toml  task_management.db
(+80 files in other folders)
