[project]
name = "03-crud-errorhandling-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
]
